# Mine_WS

./: .gitignore  .~eman使用bug.doc  README.md  akeman使用bug.doc  laneDetection.rviz  simu_data  修改要求.pptx  调试笔记.docx
data/: 1.1_(11.26,10.74,2.00).pcd  1.1_(8.81,5.95,1.05).pcd  1.1_(8.815,1.055).pcd  1.2_(-10.64,0.17,1.29).pcd  1.2_(-10.646,1.293).pcd  1.2_(-15.34,0.61,1.54).pcd  1.3_(-1.93,-12.45,-2.47).pcd  1.3_(0.61,-10.15,-2.06).pcd  1.3_(0.611,-2.062).pcd  1_center.pcd  1_center_(-356.00,156.00,-24.90).pcd  1_intersection.pcd  1_whole.pcd  2.1_(3.47,11.84,2.35).pcd  2.1_(4.95,9.03,1.58).pcd  2.1_(6.716,1.017).pcd  2.2_(-0.64,9.53,0.95).pcd  2.2_(4.059,2.891).pcd  2.3_(-14.21,5.31,2.87).pcd  2.3_(-9.738,2.219).pcd  2.3_(-9.81,3.91,2.17).pcd  2.4_(10.213,-0.949).pcd  2.4_(10.32,-3.20,-0.90).pcd  2.4_(15.03,-4.78,-1.35).pcd  2_center.pcd  2_center_(-478.00,180.00,-13.50).pcd  2_center_(-480.000,-13.200).pcd  2_intersection.pcd  2_whole.pcd  3.1_(-3.926,2.786).pcd  3.1_(-4.64,9.08,2.78).pcd  3.1_(-4.91,9.49,2.89).pcd  3.2_(-10.10,3.29,2.15).pcd  3.2_(-14.53,5.56,2.93).pcd  3.2_(-9.947,2.187).pcd  3.3_(-0.548,-4.106).pcd  3.3_(11.04,-3.22,-0.95).pcd  3.3_(6.94,-1.67,-0.20).pcd  3.4_(7.440,-0.186).pcd  3_center_(-529.00,198.00,-4.81).pcd  (+69 more)
data/cluster/: 1_center.pcd  1_intersection.pcd  1_whole.pcd  2_center.pcd  2_intersection.pcd  2_whole.pcd  3_center.pcd  3_intersection.pcd  3_whole.pcd  4_center.pcd  4_intersection.pcd  4_whole.pcd  5_center.pcd  5_intersection.pcd  5_whole.pcd  6_center.pcd  6_intersection.pcd  6_whole.pcd  7_center.pcd  7_intersection.pcd  7_whole.pcd  8_center.pcd  8_intersection.pcd  8_whole.pcd
data/old/: 1_1.pcd  1_2.pcd  1_3.pcd  1_intersection.pcd  1_whole.pcd  2_1.pcd  2_2.pcd  2_3.pcd  2_intersection.pcd  2_whole.pcd  3_1.pcd  3_2.pcd  3_3.pcd  3_intersection.pcd  3_whole.pcd  4_1.pcd  4_2.pcd  4_3.pcd  4_center.pcd  4_intersection.pcd  4_whole.pcd  5_1.pcd  5_2.pcd  5_intersection.pcd  5_whole.pcd  6_1.pcd  6_2.pcd  6_3.pcd  6_4.pcd  6_intersection.pcd  6_whole.pcd  7_1.pcd  7_2.pcd  7_3.pcd  7_4.pcd  7_intersection.pcd  7_whole.pcd  8_1.pcd  8_intersection.pcd  8_whole.pcd  (+1 more)
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
simu_data/: 10_node.pcd  11_node.pcd  12_node.pcd  13_node.pcd  14_node.pcd  15_node.pcd  16_node.pcd  17_node.pcd  18_node.pcd  1_node.pcd  2_node.pcd  3_node.pcd  4_node.pcd  5_node.pcd  6_node.pcd  7_node.pcd  8_node.pcd  9_node.pcd  Vertex.yaml
src/assistant/: CMakeLists.txt  package.xml
src/assistant/launch/: pointPosition.launch  pointPosition.rviz
src/assistant/src/: keyPointSave.cpp  pointCloudProcess.cpp  pointPosition.cpp
src/car/: manifest.xml
src/control_underground_delta/: CMakeLists.txt  README.md  package.xml
src/control_underground_delta/include/control_underground_delta/: path_follow.h
src/control_underground_delta/launch/: control_underground_delta.launch
src/control_underground_delta/src/: cmd_sim.cpp  core_path_follow.cpp  main_path_follow.cpp  odom_sim.cpp  pid_tele.py  pub_path_follow.cpp  sub_path_follow.cpp
src/mpc/: CMakeLists.txt  package.xml
src/mpc/cfg/: mpc.cfg
src/mpc/data/: path.yaml
src/mpc/include/: MPC.h  matrix2yaw.h  mpc_param.h  visualization.h
src/mpc/launch/: mpc.rviz  mpc_debug.launch  mpc_release.launch
src/mpc/src/: MPC.cpp  main.cpp  visualization.cpp
src/perception/: CMakeLists.txt  package.xml
src/perception/cfg/: intersectionDetection.cfg  laneDetection.cfg  lidarCloudProcess.cfg  simuSegSave.cfg
src/perception/include/: Edge.yaml  Vertex.yaml  intersectionLocation.h  loadMaoData.h  map.SLDPRT.STL  map_sim.SLDPRT.urdf  ndtData.yaml  registrationConfig.h  topoMap.h
src/perception/launch/: debug.launch  intersection.launch  intersectionDetection.rviz  laneDetection.launch  laneFit.rviz  mineSimulation.launch  navigation.launch  simulation.rviz
src/perception/simu_data/: 11_node.pcd  12_node.pcd  13_node.pcd  15_node.pcd  16_node.pcd  17_node.pcd  18_node.pcd  2_node.pcd  3_node.pcd  4_node.pcd  5_node.pcd  7_node.pcd  8_node.pcd  Edge.yaml  Vertex.yaml  registrationConfig.yaml
src/perception/src/: CMakeLists.txt  client.cpp  deprecated_topoMap.cpp  intersection.cpp  intersectionDetection.cpp  intersectionLocation.cpp  laneDetection.cpp  lidarCloudProcess.cpp  loadMapData.cpp  main.cpp  main_interLocal.cpp  main_topoMap.cpp  navigation.cpp  ndt.cpp  pcd_write.cpp  pointCloudProcess.cpp  segmentationSave.cpp  service.cpp  simuSegSave.cpp  test1.pcd  topoMap.cpp  topoMap.cpp1
src/perception/srv/: mineServer.srv
src/planner_underground_delta/: CMakeLists.txt  README.md  package.xml
src/planner_underground_delta/include/dubins_bug_delta/: dubins_bug.h
src/planner_underground_delta/include/lka_planner/: lka_planner.h
src/planner_underground_delta/include/planner_underground_delta/: planner_underground.h
src/planner_underground_delta/include/r_s_planner/: dubins.h
src/planner_underground_delta/launch/: planner_underground_delta.launch
src/planner_underground_delta/src/: core_db.cpp  core_lka.cc  core_planner_ug.cc  dubins.cpp  main_planner_ug.cc  pub_db.cpp  sub_db.cpp
src/preception/: CMakeLists.txt  package.xml
src/preception/cfg/: param.cfg  topoMap.cfg
src/preception/include/: Edge.yaml  mapData.yaml  ndtData.yaml  utility.h
src/preception/launch/: adjust.launch  intersection.launch  intersectionDetection.rviz
src/preception/src/: 4_whole.pcd  intersection.cpp  keyPointSave.cpp  laneDetection.cpp  ndt.cpp  pcd_read.cpp  pcd_visual.cpp  pcd_write.cpp  segmentationSave.cpp  topoMap.cpp
src/registrationSo/: CMakeLists.txt  Registrator.hpp  Visualizer.hpp  main.cpp
src/registrationSo/include/: hsvrgb.hpp
src/routing/: CMakeLists.txt  README.md  package.xml
src/routing/include/routing_delta/: dij.h
src/routing/src/: core_routing.cc  main.cpp
src/routing_delta/: CMakeLists.txt  README.md  package.xml
src/routing_delta/include/: topoMap.h
src/routing_delta/include/routing_delta/: dij.h
src/routing_delta/launch/: routing_delta.launch
src/routing_delta/src/: core_routing.cc  main_routing.cc
(+103 files in other folders)
