<?xml version="1.0"?>
<package format="2">
  <name>assistant</name>
  <version>0.0.0</version>
  <description>The assistant package</description>

  <maintainer email="lsj@todo.todo">lsj</maintainer>


  <license>TODO</license>

<!-- Url tags are optional, but multiple are allowed, one per tag -->
<!-- Optional attribute type can be: website, bugtracker, or repository -->
<url type="website">http://ros.org/wiki/turtlebot_interactive_markers</url>
<url type="repository">https://github.com/turtlebot/turtlebot_viz</url>
<url type="bugtracker">https://github.com/turtlebot/turtlebot_viz/issues</url>


<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>visualization_msgs</build_depend>
<build_depend>interactive_markers</build_depend>

<exec_depend>roscpp</exec_depend>
<exec_depend>visualization_msgs</exec_depend>
<exec_depend>interactive_markers</exec_depend>
<exec_depend>turtlebot_bringup</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
