<?xml version="1.0"?>
<package format="2">
  <name>perception</name>
  <version>0.0.0</version>
  <description>The perception package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lsj@qq.com">lsj</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://ros.org/wiki/turtlebot_interactive_markers</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_viz</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_viz/issues</url>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>turtlebot_bringup</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_export_depend>message_generation</build_export_depend>
  </export>
</package>
